# darwin

./: setup.cfg
darwin/: iterable.py  util.py
tests/: test_iterable.py  test_util.py
