[metadata]
name = darwin
version = attr: darwin.__version__
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lando-L/darwin
project_urls =
    Bug Tracker = https://github.com/Lando-L/darwin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = darwin
python_requires = >=3.9
